typograpy changes - colors declared

--- a/frontend/src/sass/1-base/_base-dir.scss
+++ b/frontend/src/sass/1-base/_base-dir.scss
@@ -1,4 +1,5 @@
 @import "colors";
 @import "variables";
-@import "./mixins/mixins";
-@import "./mixins/font";
+@import "mixins/mixins";
+@import "./fonts/font-dir";
+@import "./typography";
