--- a/frontend/src/sass/App.css
+++ b/frontend/src/sass/App.css
@@ -1,3 +1,9 @@
+body {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(60, 60, 67, 0.6);
+}
+
 @font-face {
   font-family: SF Pro Ultralight;
   src: url(./fonts/SF-Pro-Text/Ultralight.otf);
@@ -70,27 +76,6 @@
   font-family: SF Pro BlackItalic;
   src: url(./fonts/SF-Pro-Text/BlackItalic.otf);
 }
-body {
-  display: flex;
-  flex-direction: column;
-}
-
-.btn {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 13px 20px;
-  gap: 10px;
-  width: 133px;
-  height: 48px;
-  background: #007AFF;
-  border-radius: 10px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-}
-
 .lt {
   font-size: 26pt;
   line-height: 32pt;
@@ -155,4 +140,23 @@ body {
   font-size: 10pt;
   line-height: 13pt;
   font-family: SF Pro Semibold;
+}
+
+.btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 13px 20px;
+  gap: 10px;
+  width: 133px;
+  height: 48px;
+  background: #007AFF;
+  border-radius: 10px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  font-size: 13pt;
+  line-height: 16pt;
+  font-family: SF Pro Regular;
 }/*# sourceMappingURL=App.css.map */
