--- a/frontend/src/sass/3-modules/_button.scss
+++ b/frontend/src/sass/3-modules/_button.scss
@@ -7,7 +7,7 @@
   gap: 10px;
   width: 133px;
   height: 48px;
-  background: #007AFF;
+  background: $blue;
   border-radius: 10px;
   flex: none;
   order: 0;
