--- a/frontend/src/sass/App.css
+++ b/frontend/src/sass/App.css
@@ -1,7 +1,7 @@
 body {
   display: flex;
   flex-direction: column;
-  background-color: rgba(60, 60, 67, 0.6);
+  background-color: #fff;
 }
 
 @font-face {
@@ -115,19 +115,19 @@ body {
 .lt {
   font-size: 26pt;
   line-height: 32pt;
-  font-family: SF Pro Bold;
+  font-family: SF Display Bold;
 }
 
 .t1 {
   font-size: 22pt;
   line-height: 26pt;
-  font-family: SF Pro Bold;
+  font-family: SF Display Bold;
 }
 
 .t2 {
   font-size: 17pt;
   line-height: 22pt;
-  font-family: SF Pro Bold;
+  font-family: SF Display Bold;
 }
 
 .t3 {
@@ -176,23 +176,4 @@ body {
   font-size: 10pt;
   line-height: 13pt;
   font-family: SF Pro Semibold;
-}
-
-.btn {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 13px 20px;
-  gap: 10px;
-  width: 133px;
-  height: 48px;
-  background: #007aff;
-  border-radius: 10px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-  font-size: 13pt;
-  line-height: 16pt;
-  font-family: SF Pro Regular;
-} /*# sourceMappingURL=App.css.map */
+}/*# sourceMappingURL=App.css.map */
