--- a/frontend/src/sass/1-base/_variables.scss
+++ b/frontend/src/sass/1-base/_variables.scss
@@ -1,5 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   flex-direction: column;
+  max-height: 100vh;
+  height: 100vh;
+  width: 100%;
   background-color: $primary-color;
 }
