--- a/frontend/src/sass/App.css
+++ b/frontend/src/sass/App.css
@@ -1,6 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   flex-direction: column;
+  max-height: 100vh;
+  height: 100vh;
+  width: 100%;
   background-color: #fff;
 }
 
@@ -176,4 +185,25 @@ body {
   font-size: 10pt;
   line-height: 13pt;
   font-family: SF Pro Semibold;
+}
+
+.login {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  left: 0px;
+  top: 0px;
+  background-image: url(./1-base/images/bg.jpg);
+}
+
+.gr-to-left {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+  height: 100vh;
+  width: 100%;
+}
+
+.gr-to-top {
+  background: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+  height: 100vh;
+  width: 100%;
 }/*# sourceMappingURL=App.css.map */
