--- a/frontend/src/sass/2-layouts/_layout.scss
+++ b/frontend/src/sass/2-layouts/_layout.scss
@@ -1,20 +1,33 @@
-.login {
-  position: absolute;
-  width: 100%;
+.left {
+//   background-color: rgba($color: #fff, $alpha: 0.1);
+  width: 50%;
   height: 100vh;
-  left: 0px;
-  top: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-  background-image: url(./1-base/images/bg.jpg);
-}
+  .motto {
+    display: flex;
+    flex-direction: column;
+    justify-self: flex-end;
+    width: 100%;
+    height: 25vh;
+    color: $primary-color;
+    // background-color: $blue;
+    margin-bottom: 30px;
 
-.gr-to-left {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
-  height: 100vh;
-  width: 100%;
-}
-.gr-to-top {
-  background: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
-  height: 100vh;
-  width: 100%;
+    h1 {
+      font-family: SF Display Bold;
+      font-size: 65px;
+      line-height: 78px;
+      margin-left: 50px;
+    }
+    h2 {
+      margin-left: 75px;
+      font-family: SF Pro Thin;
+      font-size: 55px;
+      line-height: 78px;
+    }
+  }
+
 }
