--- a/frontend/src/sass/App.css
+++ b/frontend/src/sass/App.css
@@ -189,6 +189,8 @@ body {
 
 .login {
   position: absolute;
+  display: flex;
+  flex-direction: row;
   width: 100%;
   height: 100vh;
   left: 0px;
@@ -243,6 +245,57 @@ body {
   width: 17px;
 }
 
+.regs {
+  width: 50%;
+}
+
+.right {
+  width: 50%;
+  height: 100vh;
+  background-color: #f2f2f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-form {
+  width: 512px;
+  height: 672px;
+  background-color: #fff;
+  box-shadow: 4px 4px 17px -6px rgba(0, 0, 0, 0.25);
+  border-radius: 21px;
+  display: flex;
+  flex-direction: column;
+}
+.input-form .head {
+  height: 118px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.input-form .head h3 {
+  width: 772px;
+  text-align: center;
+  height: 56px;
+  font-family: "SF Display Bold";
+  font-size: 40px;
+  line-height: 48px;
+  padding-bottom: 70px;
+}
+.input-form .head span {
+  width: 498px;
+  height: 1px;
+  background: #ebebeb;
+  border-radius: 2px;
+}
+.input-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .left {
   width: 50%;
   height: 100vh;
@@ -254,7 +307,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-self: flex-end;
-  width: 100%;
+  width: 200%;
   height: 25vh;
   color: #fff;
   margin-bottom: 30px;
@@ -270,4 +323,73 @@ body {
   font-family: SF Pro Thin;
   font-size: 55px;
   line-height: 78px;
+}
+
+.btn {
+  border: 0;
+  outline: 0;
+  margin-top: 56px;
+  font-size: 13pt;
+  line-height: 16pt;
+  font-family: SF Pro Semibold;
+  color: #fff;
+  background-color: #007aff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 13px 20px;
+  gap: 10px;
+  width: 133px;
+  height: 48px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #1a87ff;
+}
+
+input[type=text] {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px 0px 0px 16px;
+  width: 390px;
+  height: 44px;
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  background-color: #fff;
+  outline: none;
+  border: none;
+  border-bottom: 0.5px solid #c6c6c8;
+  caret-color: #007aff;
+  font-size: 13pt;
+  line-height: 16pt;
+  font-family: SF Pro Regular;
+}
+input[type=text]::-moz-placeholder {
+  font-size: 13pt;
+  line-height: 16pt;
+  font-family: SF Pro Regular;
+  color: rgba(60, 60, 67, 0.6);
+}
+input[type=text]:-ms-input-placeholder {
+  font-size: 13pt;
+  line-height: 16pt;
+  font-family: SF Pro Regular;
+  color: rgba(60, 60, 67, 0.6);
+}
+input[type=text]::placeholder {
+  font-size: 13pt;
+  line-height: 16pt;
+  font-family: SF Pro Regular;
+  color: rgba(60, 60, 67, 0.6);
+}
+
+input[type=image] {
+  width: 182px;
+  height: 182px;
+  border-radius: 100px;
 }/*# sourceMappingURL=App.css.map */
